--- a/api/qsharp/microsoft.quantum.diagnostics.assertoperationsequalinplacecompbasis.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.assertoperationsequalinplacecompbasis.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.diagnostics.assertoperationsequalinplacecompbasis
 name: AssertOperationsEqualInPlaceCompBasis
 type: operation
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: >-
-  通过从计算基础`givenU`上检查矢量上操作`expectedU`的操作，检查操作是否等于给定输入大小的操作。
+  `givenU` `expectedU` 通过从计算基础上检查矢量上操作的操作，检查操作是否等于给定输入大小的操作。
 
   这对于两个 unitaries 的相等性是必需的，但并不足够。
 syntax: 'operation AssertOperationsEqualInPlaceCompBasis (nQubits : Int, givenU : (Qubit[] => Unit), expectedU : (Qubit[] => Unit is Adj)) : Unit'
@@ -12,7 +12,7 @@ input:
   content: '(nQubits : Int, givenU : (Qubit[] => Unit), expectedU : (Qubit[] => Unit is Adj))'
   types:
   - name: nQubits
-    summary: 操作`givenU`和`expectedU`操作 $n $ 的 qubits 的数目。
+    summary: 操作和操作 $n $ 的 qubits 的数目 `givenU` `expectedU` 。
     isPrimitive: true
     uid: Int
   - name: givenU
@@ -28,7 +28,7 @@ input:
       - isPrimitive: true
         uid: Unit
   - name: expectedU
-    summary: 要与进行比较 $n $ qubits `givenU`上的引用操作。
+    summary: 要与进行比较 $n $ qubits 上的引用操作 `givenU` 。
     isOperation: true
     input:
       types:
@@ -47,9 +47,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: c3a98dee80b9e41ea3c27e1e52c3046751307912
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1c49d1e32852be40d94621da2a8c1fa53b6e666c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677277"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337512"
