--- a/api/qsharp/microsoft.quantum.diagnostics.assertqubitwithintolerance.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.assertqubitwithintolerance.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.diagnostics.assertqubitwithintolerance
 name: AssertQubitWithinTolerance
 type: operation
-namespace: Microsoft.Quantum.Diagnostics
-summary: 断言 qubit `q`位于 Pauli Z 运算符的预期 eigenstate 中，直到达到给定的容差。
-remarks: <xref:microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance>允许对任意 qubit 的状态进行断言，而不只是 $Z $ eigenstates。
+namespace: microsoft.quantum.diagnostics
+summary: 断言 qubit `q` 位于 Pauli Z 运算符的预期 eigenstate 中，直到达到给定的容差。
+remarks: <xref:microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance> 允许对任意 qubit 的状态进行断言，而不只是 $Z $ eigenstates。
 syntax: 'operation AssertQubitWithinTolerance (expected : Result, q : Qubit, tolerance : Double) : Unit'
 input:
   content: '(expected : Result, q : Qubit, tolerance : Double)'
   types:
   - name: expected
-    summary: Qubit 应采用的状态： `Zero`或。 `One`
+    summary: Qubit 应采用的状态： `Zero` 或 `One` 。
     isPrimitive: true
     uid: Result
   - name: q
@@ -29,9 +29,9 @@ output:
 seeAlso:
 - assertqubitisinstatewithintolerance
 metadata:
-  ms.openlocfilehash: 2749c682128e7c67506c2291d7a9e6034998731d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e5212b307f6bf90b88194e6e4158f41a0febf059
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677249"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337393"
