--- a/api/qsharp/microsoft.quantum.machinelearning.controlledrotation.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.controlledrotation.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.machinelearning.controlledrotation
 name: ControlledRotation
 type: newtype
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 描述在其目标和控件索引、旋转轴和模型参数向量的索引方面的受控旋转。
 remarks: >-
-  通过将设置`ControlIndices`为空的索引数组， `new Int[0]`可以表示无法控制的旋转。
+  通过将设置 `ControlIndices` 为空的索引数组，可以表示无法控制的旋转 `new Int[0]` 。
 
 
   ### <a name="examples"></a>示例
@@ -24,9 +24,9 @@ remarks: >-
   ```
 syntax: newtype ControlledRotation = ((Int, Int[]), Pauli, Int);
 metadata:
-  ms.openlocfilehash: 058c1dc75dd169971d0c542d0577d739327e4d56
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 132a69f35e1cbec57c15c3f362a25849e3d66c27
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681681"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344907"
