--- a/api/qsharp/microsoft.quantum.machinelearning.cyclicentanglinglayer.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.cyclicentanglinglayer.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.machinelearning.cyclicentanglinglayer
 name: CyclicEntanglingLayer
 type: function
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 返回沿给定轴进行了单独控制的旋转的数组，将循环排列在 qubits 的寄存器中，并通过不同的模型参数进行参数化。
 examples: >-
   以下项是等效的：
@@ -38,13 +38,13 @@ input:
 output:
   content: Microsoft.Quantum.MachineLearning.ControlledRotation[]
   types:
-  - summary: 跨`nQubits` qubits 寄存器布局循环的由两个 qubit 控制的循环组成的数组。
+  - summary: 跨 qubits 寄存器布局循环的由两个 qubit 控制的循环组成的数组 `nQubits` 。
     isArray: true
     uid: microsoft.quantum.machinelearning.controlledrotation
 metadata:
-  ms.openlocfilehash: 9578cb4798fc403642a98c7886374295000b6097
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: daac61ccccadbe16910c6487549cd6ce524d3b58
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681664"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344839"
