--- a/api/qsharp/microsoft.quantum.arithmetic.ripplecarryadderttk.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.ripplecarryadderttk.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.arithmetic.ripplecarryadderttk
 name: RippleCarryAdderTTK
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: >-
   可逆的就地波纹-包含两个整数。
 
-  假设在 LittleEndian 中编码的两个 $n $ 位`xs`整数`ys`和一个 qubit，则该操作将计算两个整数的总和，其中包含结果的 $n $ 最低有效位`ys` ，而执行位被 xored 到 qubit。 `carry`
+  假设在 LittleEndian 中编码的两个 $n $ 位整数 `xs` 和 `ys` 一个 qubit，则该操作将计算两个整数的总和，其中包含结果的 $n $ 最低有效位 `ys` ，而执行位被 xored 到 qubit `carry` 。
 remarks: 此操作与 RippleCarryAdderD 和 RippleCarryAdderCDKM 具有相同的功能，但不使用任何 ancilla qubits。
 syntax: 'operation RippleCarryAdderTTK (xs : Microsoft.Quantum.Arithmetic.LittleEndian, ys : Microsoft.Quantum.Arithmetic.LittleEndian, carry : Qubit) : Unit'
 references: >-
@@ -34,9 +34,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 8c1d67c4ffb7d2f75d70bc02be958fd08b6c6b14
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 51b94e3be3b400e11c269bdcc94fed6433131c99
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676662"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89352761"
