--- a/api/qsharp/microsoft.quantum.arithmetic.squaresi.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.squaresi.yml
@@ -2,18 +2,18 @@
 uid: microsoft.quantum.arithmetic.squaresi
 name: SquareSI
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
-summary: 方形有符号`xs`整数，并将结果`result`存储在中，后者最初必须为零。
+namespace: microsoft.quantum.arithmetic
+summary: 方形有符号整数， `xs` 并将结果存储在中 `result` ，后者最初必须为零。
 remarks: 实现依赖于 IntegerSquare。
 syntax: 'operation SquareSI (xs : Microsoft.Quantum.Arithmetic.SignedLittleEndian, result : Microsoft.Quantum.Arithmetic.SignedLittleEndian) : Unit'
 input:
   content: '(xs : Microsoft.Quantum.Arithmetic.SignedLittleEndian, result : Microsoft.Quantum.Arithmetic.SignedLittleEndian)'
   types:
   - name: xs
-    summary: n 位整数到平方（SignedLittleEndian）
+    summary: 'n 位整数到平方 (SignedLittleEndian) '
     uid: microsoft.quantum.arithmetic.signedlittleendian
   - name: result
-    summary: 2n 位结果（SignedLittleEndian）的状态必须为 $ \ket{0}$ 初始。
+    summary: " (SignedLittleEndian) 的2n 位结果必须处于 $ \\ket {0} $ 起初状态。"
     uid: microsoft.quantum.arithmetic.signedlittleendian
 output:
   content: Unit
@@ -24,9 +24,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: e4a212094c38d370e2489b586ee8014131bef9dc
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ee4e8a7ad27fdfb03f590f229a1c0e344a985ff6
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676602"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89352659"
