--- a/api/qsharp/microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.diagnostics.assertqubitisinstatewithintolerance
 name: AssertQubitIsInStateWithinTolerance
 type: operation
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: >-
   断言处于预期状态的 qubit。
 
 
-  `expected`表示复杂向量，$ \ket{\psi} = \begin{bmatrix}a & b\end {bmatrix} ^ {\mathrm{T}} $。
+  `expected` 表示复杂向量，$ \ket{\psi} = \begin{bmatrix}a & b\end {bmatrix} ^ {\mathrm{T}} $。
 
   元组的第一个元素表示每个 $a $，$b $ 是复数的实部，第二个元素是复数的实部。
 
@@ -37,11 +37,11 @@ remarks: >-
   ```
 
 
-  容差 $L\_是三维实向量（x ₂，x ₃，x ₄）由 $ \langle\psi | \psi\rangle = x\_1 I + x\_2 x + x\_3 Y + x\_4 Z $ 和实向量（y ₂，y ₃）定义，₄ = Y 复数 I + y ₁ x + y ₂ y + y ₃ Z，其中₄是与寄存器状态相对应的密度矩阵。
+  容差是 \_ 三维实向量 (x ₂之间的 $L {\infty} $ 距离。 x ₃、x ₄) 由 $ \langle\psi | \psi\rangle = x \_ 1 I + x \_ 2 x + x \_ 3 Y + x \_ 4 Z $ 和实矢量 (y ₂、y ₃、y ₄定义，) 由复数 = Y ₁ I + y ₂ x + y ₃ y + y ₄ Z 定义，其中复数是与寄存器状态相对应的密度矩阵。
 
-  这仅在以下假定： Tr （复数）和 Tr （| ψ⟩⟨ψ |）均为1（例如 x ₁ = 1/2、y ₁ = 1/2）时才是如此。
+  这在假设 Tr (复数) 和 Tr (| ψ⟩⟨ψ |) 都是 1 (例如 x ₁ = 1/2、y ₁ = 1/2) 。
 
-  如果不是这种情况，则该函数将断言（x ₂₁，x ₃-x ₁，x ₄-x ₁，x ₄ + x ₁）与（y ₂-y ₁，y ₃-y ₁，y ₄-y ₁，y ₄ + y ₁）之间的∞距离小于公差参数。
+  如果不是这种情况，则该函数将断言 (x ₂-x ₁，x ₃-x ₁，x ₄-x ₁，x ₄ + x ₁) 和 (y ₂-y ₁，y ₃ + y ₁) 小于公差参数的∞距离。
 examples: >-
   ```Q#
 
@@ -60,7 +60,7 @@ input:
   content: '(expected : (Microsoft.Quantum.Math.Complex, Microsoft.Quantum.Math.Complex), register : Qubit, tolerance : Double)'
   types:
   - name: expected
-    summary: 需要分别为 $ \ket{0}$ 和 $ \ket{1}$ 的复杂 amplitudes。
+    summary: 需要分别为 $ \ket {0} $ 和 $ \ket $ 的复杂 amplitudes {1} 。
     types:
     - uid: microsoft.quantum.math.complex
     - uid: microsoft.quantum.math.complex
@@ -81,9 +81,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 77d28c122a44f39924242dedb6bd6163974e18c1
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 6517c96e87042948d3e6f235e64c7b3e0dc5d387
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82656602"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337427"
