--- a/api/qsharp/microsoft.quantum.diagnostics.contradiction.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.contradiction.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.diagnostics.contradiction
 name: Contradiction
 type: function
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 声明传统条件为 false。
 examples: >-
   以下 Q # 代码将打印 "Hello，world"：
@@ -35,9 +35,9 @@ output:
 seeAlso:
 - microsoft.quantum.diagnostics.fact
 metadata:
-  ms.openlocfilehash: 5956f0a3010b46651627e147406e89f8a508a370
-  ms.sourcegitcommit: a35498492044be4018b4d1b3b611d70a20e77ecc
+  ms.openlocfilehash: 0e134d00cec28d523abe3c3dc4988f0914a302bd
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/03/2020
-  ms.locfileid: "84328504"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337376"
