--- a/api/qsharp/microsoft.quantum.diagnostics.dumpmachine.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.dumpmachine.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.diagnostics.dumpmachine
 name: DumpMachine
 type: function
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 转储当前目标计算机的状态。
 remarks: >-
   此方法允许您将有关目标计算机的当前状态的信息转储到文件或其他位置。
 
-  生成的实际信息和的语义`location`特定于每个目标计算机。 但是，提供空元组作为位置（`()`）或仅省略`location`参数通常意味着将输出生成到控制台。
+  生成的实际信息和的语义 `location` 特定于每个目标计算机。 但是，提供空元组作为位置 (`()`) 或仅省略 `location` 参数通常意味着将输出生成到控制台。
 
 
   对于作为量程开发工具包的一部分分发的本地完整状态模拟器，此方法需要一个带有文件路径的字符串，它将波形函数编写为一维复数数组，其中每个元素都表示测量相应状态的概率的 amplitudes。
@@ -26,9 +26,9 @@ output:
     isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 7511e0bdded689c84cb90794860dd79e48950414
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7b30ac476cd8c3f5db5344d7ac9cabffd670f1a1
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82656559"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337359"
