--- a/api/qsharp/microsoft.quantum.diagnostics.dumpoperation.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.dumpoperation.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.diagnostics.dumpoperation
 name: DumpOperation
 type: operation
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 在给定操作的情况下，显示有关当前执行目标可用的操作的诊断。
 remarks: >-
   调用此操作在 Q # 内没有明显的效果。 显示的确切诊断（如果有）依赖于当前的执行目标和编辑器环境。
@@ -55,9 +55,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: ba2e3c4dd42faa0919b5777a6db82ce787acb80a
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: c9005373fb2be7bbfcd19870fa741cf4b0d8d754
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863909"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337342"
