--- a/api/qsharp/microsoft.quantum.diagnostics.enabletestingvianame.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.enabletestingvianame.yml
@@ -2,13 +2,13 @@
 uid: microsoft.quantum.diagnostics.enabletestingvianame
 name: EnableTestingViaName
 type: newtype
-namespace: Microsoft.Quantum.Diagnostics
+namespace: microsoft.quantum.diagnostics
 summary: 编译器可识别的属性，通过该属性可以定义可在加载类型时使用的可选名称，也可以将其用于测试目的。
 syntax: newtype EnableTestingViaName = String;
 metadata:
-  ms.openlocfilehash: 769df7a097ddbd49877b72369cd2e72a27e2058c
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 58ae661d98b7177230fa54946bafdd07c77ff38b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885769"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89337325"
