--- a/api/qsharp/microsoft.quantum.machinelearning.estimateclassificationprobabilities.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.estimateclassificationprobabilities.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.machinelearning.estimateclassificationprobabilities
 name: EstimateClassificationProbabilities
 type: operation
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 给定一组示例和顺序分类器，通过反复测量每个样本上分类器的输出来估算这些样本的分类概率。
 syntax: 'operation EstimateClassificationProbabilities (tolerance : Double, model : Microsoft.Quantum.MachineLearning.SequentialModel, samples : Double[][], nMeasurements : Int) : Double[]'
 input:
@@ -34,9 +34,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 811f832a57a14e85c5713ce986175e496e623794
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 4a9d35ab2d2030a47c6748ad16af5c7178576103
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885222"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344737"
