--- a/api/qsharp/microsoft.quantum.preparation.prepareuniformsuperposition.yml
+++ b/api/qsharp/microsoft.quantum.preparation.prepareuniformsuperposition.yml
@@ -2,16 +2,16 @@
 uid: microsoft.quantum.preparation.prepareuniformsuperposition
 name: PrepareUniformSuperposition
 type: operation
-namespace: Microsoft.Quantum.Preparation
+namespace: microsoft.quantum.preparation
 summary: >-
-  创建对 superposition 进行编码的状态为0的`nIndices`统一。
+  创建对 superposition 进行编码的状态为0的统一 `nIndices` 。
 
 
-  也就是说，在给定输入状态 $ \ket{0\cdots 0} $ 的情况下，此单一 $U $ 将在所有数字状态 $0 $ 到 $M-$1 上创建一个统一的 superposition。 换句话说，$ $ \begin{align} U\ket{0}= \Frac{1}{\sqrt{m}}\ sum_ {j = 0} ^ {M-1} \ket{j}。
+  也就是说，在给定输入状态 $ \ket{0\cdots 0} $ 的情况下，此单一 $U $ 将在所有数字状态 $0 $ 到 $M-$1 上创建一个统一的 superposition。 换句话说，$ $ \begin{align} U\ket {0} = \frac {1} {\sqrt{m}}\ sum_ {j = 0} ^ {M-1} \ket{j}。
 
   \end{align} $ $。
 examples: >-
-  下面的示例准备 $3 $ qubits 上{1}的状态{6}$ \frac {\sqrt} \ sum_ {j{5}= 0} ^ \ket{j} $。
+  下面的示例准备 {1} $3 $ qubits 上的状态 $ \frac {\sqrt {6} } \ sum_ {j = 0} ^ {5} \ket{j} $。
 
 
   ```Q#
@@ -33,7 +33,7 @@ input:
     uid: Int
   - name: indexRegister
     summary: >-
-      以`LittleEndian`格式存储数字状态的 qubit 寄存器。
+      以格式存储数字状态的 qubit 寄存器 `LittleEndian` 。
 
       此注册必须能够将数字存储 $M-$1，并假定在状态 $ \ket{0\cdots 0} $ 中进行初始化。
     uid: microsoft.quantum.arithmetic.littleendian
@@ -46,9 +46,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: a697f4d410ed47c8be3908e2206080a9393260f7
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 442daa4affb6b59191af9117a8094f7bfbf71302
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686525"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331324"
