--- a/api/qsharp/microsoft.quantum.preparation.statepreparationcomplexcoefficients.yml
+++ b/api/qsharp/microsoft.quantum.preparation.statepreparationcomplexcoefficients.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.preparation.statepreparationcomplexcoefficients
 name: StatePreparationComplexCoefficients
 type: function
-namespace: Microsoft.Quantum.Preparation
+namespace: microsoft.quantum.preparation
 summary: >-
   返回准备特定量程状态的操作。
 
@@ -13,9 +13,9 @@ summary: >-
   新分配的寄存器上的 U 操作由 $ $ \begin{align} U\ket {0 ... 0} = \ket{\psi} = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}}{\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | r_j | ^ 2}}。
 
   \end{align} $ $
-remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 `coefficients`如果指定的元素为 $ （r_j、t_j） = （0.0，0.0） $，则将用元素填充。
+remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 `coefficients` 将用元素 $ (r_j，t_j) = (0.0，0.0) $ （如果指定少于 $ 2 ^ n $）。
 examples: >-
-  以下代码片段在 qubit 注册{0}{2} `qubitsLE`中准备好量程状态 $ \ket{\psi} = e ^ {i 0.1} \ sqrt {1/8} \ 票证 + \ sqrt {7/8} \ 票证 $。
+  以下代码片段在 qubit 注册中准备好量程状态 $ \ket{\psi} = e ^ {i 0.1} \ sqrt {1/8} \ 票证 {0} + \ sqrt {7/8} \ 票证 {2} $ `qubitsLE` 。
 
 
   ```qsharp
@@ -43,7 +43,7 @@ input:
   content: '(coefficients : Microsoft.Quantum.Math.ComplexPolar[])'
   types:
   - name: coefficients
-    summary: 由其绝对值和相位 $ （r_j，t_j） $ 表示的最大值为 $ 2 ^ n $ 复数系数的数组。 $J $ th 用于索引以小字节序格式编码的数字状态 $ \ket{j} $。
+    summary: 由最多 $ 2 ^ n $ 个复数系数表示的数组，其绝对值和阶段 $ (r_j，t_j) $。 $J $ th 用于索引以小字节序格式编码的数字状态 $ \ket{j} $。
     isArray: true
     uid: microsoft.quantum.math.complexpolar
 output:
@@ -62,9 +62,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: d42ff528c40346ddb5a487ca68c70544cac20aeb
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f7726320e4e1c5da3cb18b9bc34e4e861000aa33
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686476"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331205"
