--- a/api/qsharp/microsoft.quantum.preparation.statepreparationpositivecoefficients.yml
+++ b/api/qsharp/microsoft.quantum.preparation.statepreparationpositivecoefficients.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.preparation.statepreparationpositivecoefficients
 name: StatePreparationPositiveCoefficients
 type: function
-namespace: Microsoft.Quantum.Preparation
+namespace: microsoft.quantum.preparation
 summary: >-
   返回一个准备给定量程状态的操作。
 
@@ -13,9 +13,9 @@ summary: >-
   新分配的寄存器上的 U 操作是由 $ $ \begin{align} U \ket{0\cdots 0} = \ket{\psi} = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} \ alpha_j \ket{j}}{\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | \ alpha_j | ^ 2}}。
 
   \end{align} $ $
-remarks: 负输入系数 $ \ alpha_j < $0 将被视为具有值 $ | \ alpha_j | $ 的正值。 `coefficients`如果指定少于 $ 2 ^ n $，则将用元素 $ \ alpha_j = $0.0 填充。
+remarks: 负输入系数 $ \ alpha_j < $0 将被视为具有值 $ | \ alpha_j | $ 的正值。 `coefficients` 如果指定少于 $ 2 ^ n $，则将用元素 $ \ alpha_j = $0.0 填充。
 examples: >-
-  以下代码片段在 qubit 注册{0}{2} `qubitsLE`中准备好量程状态 $ \ket{\psi} = \ sqrt {1/8} \ 票证 + \ sqrt {7/8} \ 票证 $。
+  以下代码片段在 qubit 注册中准备好量程状态 $ \ket{\psi} = \ sqrt {1/8} \ 票证 {0} + \ sqrt {7/8} \ 票证 {2} $ `qubitsLE` 。
 
 
   ```qsharp
@@ -55,9 +55,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: d419fd88ed037001cc51dbd354b5c89dbe334246
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7f801c02044195aa2b85bf6fd941923cf474a36b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686462"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331222"
