--- a/api/qsharp/microsoft.quantum.random.categoricaldistribution.yml
+++ b/api/qsharp/microsoft.quantum.random.categoricaldistribution.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.random.categoricaldistribution
 name: CategoricalDistribution
 type: function
-namespace: Microsoft.Quantum.Random
+namespace: microsoft.quantum.random
 summary: 返回一个离散分类分布，其中显式指定了给定结果的每个有限列表的概率。
 examples: >-
   以下 Q # 代码将显示0，概率为30%，1的概率为70%：
@@ -33,9 +33,9 @@ output:
   - summary: '`i`带有概率的索引 `probs[i] / sum` ，其中 `sum` 是给定的和的总和 `probs` `Fold(PlusD, 0.0, probs)` 。'
     uid: microsoft.quantum.random.discretedistribution
 metadata:
-  ms.openlocfilehash: e81b286a1268e9ad1819a8f77bb375760f95af71
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: a298d84d177c15d67d9d1ec24c8f6a9c11f1cd8b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863996"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331103"
