--- a/api/qsharp/microsoft.quantum.random.complexdistribution.yml
+++ b/api/qsharp/microsoft.quantum.random.complexdistribution.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.random.complexdistribution
 name: ComplexDistribution
 type: newtype
-namespace: Microsoft.Quantum.Random
+namespace: microsoft.quantum.random
 summary: 表示对复数的单变量概率分布。
 syntax: newtype ComplexDistribution = (Unit => Microsoft.Quantum.Math.Complex);
 seeAlso:
@@ -10,9 +10,9 @@ seeAlso:
 - microsoft.quantum.random.discretedistribution
 - microsoft.quantum.random.bigdiscretedistribution
 metadata:
-  ms.openlocfilehash: 74f12baeffd5ba7cd211269b19cc05b43651f382
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: 9b95b0d33f9127f7e838b4feb6381315f2c98a2b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863993"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331052"
