--- a/api/qsharp/microsoft.quantum.random.continuousuniformdistribution.yml
+++ b/api/qsharp/microsoft.quantum.random.continuousuniformdistribution.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.random.continuousuniformdistribution
 name: ContinuousUniformDistribution
 type: function
-namespace: Microsoft.Quantum.Random
+namespace: microsoft.quantum.random
 summary: 返回在给定的非独占时间间隔内的统一分布。
 remarks: 如果为 `max <= min` ，则失败。
 examples: >-
@@ -36,9 +36,9 @@ output:
 seeAlso:
 - microsoft.quantum.drawrandomdouble
 metadata:
-  ms.openlocfilehash: ac2f90f2793cf6a94fbb50bdac1d05f3790efa1e
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: 18712751937f2787239ce040b430c5d417a18098
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863989"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331001"
